--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "<Application Name>",
-  "short_name": "<Application Short Name>",
+  "name": "<ToDoList>",
+  "short_name": "<ToDo>",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
-  "scope": "./",
-  "start_url": "./",
+  "scope": ".",
+  "start_url": "/",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
